--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,4 @@
 <!doctype html>
 <html>
-	<a href="/blog">Main Blog Page</a> <a href="/">Add a Blog Entry</a>
-	<head>
-        <title>{{title}}</title>
-    </head>
-<body>
-
-    {% block content %}
-    {% endblock %}
-
-</body>
+	<a href="/">Home</a> <a href="/blog">All Posts</a> <a href="/newpost">New Post</a> <a href="/login">Log in </a> <a href="/logout">Log out</a>
 </html>
